--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     </header>
     <main class="chats">
         <ul class="chats__list">
-            <li class="chats__chat">
+            <li class="chats__chat chat">
                 <div class="chat__column">
-                    <img src="images/avatar.jpg" alt="" class="chat__avatar">
+                    <img src="images/avatar.jpg" alt="" class="chat__avatar g-avatar">
                     <div class="chat__content">
                         <span class="chat__username">
                             Kyoungwon
