--- a/friends.html
+++ b/friends.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <title>Friends | Kakao Clone</title>
+
 </head>
 
 <body>
@@ -73,7 +74,7 @@
         <ul class="friends__list">
             <h5 class="friends__title">Friends 14</h5>
 
-            <li class="friends__friend friend friend--lg">
+            <li class="friends__friend friend">
                 <div class="friend__column">
 
                     <img src="images/avatar.jpg" class="g-avatar friend__avatar">
