--- a/index.html
+++ b/index.html
@@ -44,19 +44,21 @@
     <main class="chats">
         <ul class="chats__list">
             <li class="chats__chat chat">
-                <div class="chat__column">
-                    <img src="images/avatar.jpg" alt="" class="chat__avatar g-avatar">
-                    <div class="chat__content">
-                        <span class="chat__username">
-                            Kyoungwon
-                        </span>
-                        <span class="chat__preview">Going home!</span>
-                    </div>
+                <a href="chat.html">
+                    <div class="chat__column">
+                        <img src="images/avatar.jpg" alt="" class="chat__avatar g-avatar">
+                        <div class="chat__content">
+                            <span class="chat__username">
+                                Kyoungwon
+                            </span>
+                            <span class="chat__preview">Going home!</span>
+                        </div>
 
-                </div>
-                <div class="chat__column">
-                    <span class="chat__timestamp">Yesterday</span>
-                </div>
+                    </div>
+                    <div class="chat__column">
+                        <span class="chat__timestamp">Yesterday</span>
+                    </div>
+                </a>
             </li>
         </ul>
 
