#2.7 Friend Component part Two

--- a/friends.html
+++ b/friends.html
@@ -63,7 +63,7 @@
             <div class="friends__friend friend">
                 <div class="friend__column">
 
-                    <img src="images/avatar.jpg" class="g-avatar friend__avatar">
+                    <img src="images/avatar.jpg" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             Plus Friend
@@ -78,7 +78,7 @@
             <li class="friends__friend friend">
                 <div class="friend__column">
 
-                    <img src="images/avatar.jpg" class="g-avatar friend__avatar">
+                    <img src="images/avatar.jpg" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             Kyoungwon
