--- a/index.html
+++ b/index.html
@@ -46,18 +46,27 @@
         <ul class="chats__list">
             <li class="chats__chat chat">
                 <a href="chat.html">
-                    <div class="chat__column">
-                        <img src="images/avatar.jpg" alt="" class="chat__avatar g-avatar">
-                        <div class="chat__content">
-                            <span class="chat__username">
-                                Kyoungwon
-                            </span>
-                            <span class="chat__preview">Going home!</span>
-                        </div>
+                    <div class="chats__chat friend">
+                        <div class="friend__column">
 
-                    </div>
-                    <div class="chat__column">
-                        <span class="chat__timestamp">Yesterday</span>
+                            <img src="images/avatar.jpg" class="m-avatar friend__avatar">
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    Lynn
+                                </span>
+                                <span class="friend__bottom-text">
+                                    Going Home
+                                </span>
+                            </div>
+                        </div>
+                        <div class="friend__column">
+                            <div class="friend__now-listening">
+                                <span class="chat__timestamp">
+                                    March 8
+                                </span>
+
+                            </div>
+                        </div>
                     </div>
                 </a>
             </li>
