--- a/friends.html
+++ b/friends.html
@@ -43,7 +43,7 @@
     </header>
     <main class="friends">
         <header class="friends__header">
-            <div class="friends__friend friend friend--lg">
+            <div class="friends__friend friend">
                 <div class="friend__column">
 
                     <img src="images/avatar.jpg" class="g-avatar friend__avatar">
@@ -91,9 +91,9 @@
                 <div class="friend__column">
                     <div class="friend__now-listening">
                         <span>
-                            FRISLAND (FT NomadCoders)
+                            FTISLAND (FT NomadCoders)
+                            <i class="fas fa-play"></i>
                         </span>
-                        <i class="fas fa-play"></i>
                     </div>
                 </div>
             </li>
