--- a/find.html
+++ b/find.html
@@ -56,7 +56,7 @@
                         <i class="fas fa-user-plus fa-2x"></i>
                     </span>
                     <span class="header-btn__title">
-                        Add byt Contacts
+                        Add by Contacts
                     </span>
                 </li>
                 <li class="find__header-btn header-btn">
