--- a/friends.html
+++ b/friends.html
@@ -59,32 +59,32 @@
             </div>
         </header>
         <div class="friends__plus">
-            <h5 class="friends__title">Plus Friend</h5>
+            <h5 class="friends__title">Best Friend</h5>
             <div class="friends__friend friend">
                 <div class="friend__column">
 
-                    <img src="images/avatar.jpg" class="friend__avatar">
+                    <img src="images/nico.jpg" class="friend__s-avatar">
                     <div class="friend__content">
                         <span class="friend__name">
-                            Plus Friend
+                            Nico
                         </span>
                     </div>
                 </div>
             </div>
         </div>
         <ul class="friends__list">
-            <h5 class="friends__title">Friends 14</h5>
+            <h5 class="friends__title">Friends 1</h5>
 
             <li class="friends__friend friend">
                 <div class="friend__column">
 
-                    <img src="images/avatar.jpg" class="friend__avatar">
+                    <img src="images/lynn.jpg" class="friend__s-avatar">
                     <div class="friend__content">
                         <span class="friend__name">
-                            Kyoungwon
+                            Lynn
                         </span>
                         <span class="friend__status">
-                            My name is Kyoungwon
+                            Nomad Coders Forever!!
                         </span>
                     </div>
                 </div>
