--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                     <div class="chats__chat friend">
                         <div class="friend__column">
 
-                            <img src="images/avatar.jpg" class="m-avatar friend__avatar">
+                            <img src="images/lynn.jpg" class="m-avatar friend__avatar">
                             <div class="friend__content">
                                 <span class="friend__name">
                                     Lynn
                                 </span>
                                 <span class="friend__bottom-text">
-                                    Going Home
+                                    Nomad Coders Forever!!
                                 </span>
                             </div>
                         </div>
