--- a/friends.html
+++ b/friends.html
@@ -78,7 +78,7 @@
             <li class="friends__friend friend">
                 <div class="friend__column">
 
-                    <img src="images/lynn.jpg" class="friend__s-avatar">
+                    <img src="images/lynn.JPG" class="friend__s-avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             Lynn
