--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="chats__chat friend">
                         <div class="friend__column">
 
-                            <img src="images/lynn.jpg" class="m-avatar friend__avatar">
+                            <img src="images/lynn.JPG" class="m-avatar friend__avatar">
                             <div class="friend__content">
                                 <span class="friend__name">
                                     Lynn
